@@ -1,15 +1,22 @@
 package com.comp3652.values;
 
-import com.comp3652.lang.SMPLExp;
+import com.comp3652.lang.AIRExpFrac;
 
 /**
  * Created by carlos on 12/27/15.
  */
 public class SMPLFloat extends SMPLValue<Float> {
-    private Double value;
 
-    public SMPLFloat(SMPLValue<SMPLExp> exps) {
-        this.value = new Double(exps.toString());
+	public SMPLFloat(float newValue) {
+		value = Float.valueOf(newValue);
+	}
+
+	public SMPLFloat(Float newValue) {
+		value = newValue;
+	}
+
+    @Override
+    public String toString(){
+        return "" + value;
     }
-
 }
